# project-euler-rust

./: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: common.rs  main.rs
src/solutions/: mod.rs  p1.rs  p12.rs  p13.rs  p14.rs  p15.rs  p16.rs  p18.rs  p2.rs  p20.rs  p21.rs  p22.rs  p23.rs  p25.rs  p26.rs  p27.rs  p28.rs  p29.rs  p292.rs  p30.rs  p31.rs  p33.rs  p34.rs  p39.rs  p494.rs  p495.rs  p5.rs  p6.rs  p67.rs  p69.rs  p71.rs  p73.rs  p8.rs  p9.rs  sol_1.rs  sol_10.rs  sol_11.rs  sol_16.rs  sol_17.rs  sol_19.rs  (+8 more)
