[package]
name = "project-euler"
version = "0.1.0"
authors = ["Maxence Frenette <maxence.frenette@gmail.com>"]
edition = "2018"

[dependencies]
gcd = "1.2.0"
lazy_static = "1.3.0"
float-ord = "0.2.0"
primal = "0.2.3"
cached = "0.8.0"
mod_exp = "1.0.1"
itertools = "0.8.0"
num = "0.2.0"
chrono = "0.4.6"
project-euler-macros = { version = "0.1.0", path = "./macros" }
log = "0.4.6"
env_logger = "0.6.1"
